Improve ClassWriter model.